# adp-1997

./: CONTRIBUTING.md  cabal.project  flake.nix  rnd.org  script.sh
nix/: build-tools.nix  haskell.nix  lib.nix
nixos/cardano-node-cluster/: cardano-node-cluster.nix  default.nix  mkfiles.patch
nixos/sandbox/: configuration.nix  default.nix
plutus/always-succeed/: always-succeed.cabal
plutus/always-succeed/app/: Main.hs
plutus/always-succeed/src/: AlwaysSucceed.hs
plutus/common/: common.cabal
plutus/common/src/: Common.hs
plutus/stake-script/: CHANGELOG.md  stake-script.cabal
plutus/stake-script/app/: Main.hs
plutus/stake-script/src/: StakeScript.hs
