cabal-version:      2.4
name:               stake-script
version:            0.1.0.0

author:             Samuel Evans-Powell
maintainer:         mail@sevanspowell.net

extra-source-files: CHANGELOG.md

common project-config
  default-language:     Haskell2010
  default-extensions:   OverloadedStrings

  ghc-options:          -Wall
                        -Wcompat
                        -Wincomplete-record-updates
                        -Wincomplete-uni-patterns
                        -Wpartial-fields
                        -Wredundant-constraints
                        -Wunused-packages

library
    import: project-config
    build-depends:    base ^>=4.14.3.0
                    , cardano-api
                    , plutus-ledger-api
                    , plutus-tx
                    , serialise
                    , bytestring
                    , plutus-tx-plugin
                    , plutus-ledger
    ghc-options: -fobject-code -fno-ignore-interface-pragmas -fno-omit-interface-pragmas
    hs-source-dirs:   src
    default-language: Haskell2010
    exposed-modules:  StakeScript

executable stake-script
    main-is:          Main.hs
    build-depends:    base ^>=4.14.3.0
                    , common
                    , stake-script
                    , cardano-api
                    , plutus-ledger-api
                    , cardano-ledger-alonzo
                    , bytestring
    hs-source-dirs:   app
    default-language: Haskell2010
